--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
 		<title>Crazy Cars - Play Unblocked at crazy-cars.github.io</title>
 			<link rel="icon" href="/assets/images/favicon.png" sizes="32x32">
-		<meta name="description" content="Play Crazy Cars Unblocked for Free at School - no Ads - Crazy Cars for ChromeBook">
+		<meta name="description" content="Crazy Cars: Free, ad-free & safe for kids. Experience wild races, perform stunts, and explore fun tracks in this exhilarating car game. Play now!">
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
 		<!-- <link rel="stylesheet" type="text/css" href="assets/css/jquery-comments.css" /> -->
 		<!-- <link rel="stylesheet" type="text/css" href="assets/css/user.css" /> -->
@@ -25,7 +25,15 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 		
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X4CCPP1HS8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-X4CCPP1HS8');
+</script>
 
 </head>
 
@@ -75,7 +83,7 @@
 		</div>
 		<div class="game-info">
 			<div class="header-left">
-				<h1 class="single-title">Crazy Cars Unblocked at School</h1>
+				<h1 class="single-title">Crazy Cars</h1>
 			</div>
 			<div class="header-right">
 				<div class="b-action">						
